@@ -1,8 +1,6 @@
-
 package com.yourcompany;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jfree.chart.ChartFactory;
 import org.jfree.chart.JFreeChart;
@@ -11,18 +9,15 @@ import org.jfree.chart.plot.CategoryPlot;
 import org.jfree.chart.plot.PlotOrientation;
 import org.jfree.data.category.DefaultCategoryDataset;
 
-
 public class ChartHelper {
-
 
     public static JFreeChart createEmpiricalChart(List<SearchResult<Article>> results, String chartTitle) {
         DefaultCategoryDataset dataset = new DefaultCategoryDataset();
 
-
         List<String> algorithms = results.stream()
                 .map(SearchResult::getAlgorithmName)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         for (String algo : algorithms) {
             double meanTime = results.stream()
@@ -34,7 +29,6 @@ public class ChartHelper {
             dataset.addValue(meanTime, algo, "Mean Time (ns)");
         }
 
-
         JFreeChart chart = ChartFactory.createBarChart(
                 chartTitle,
                 "Algorithm",
@@ -44,41 +38,32 @@ public class ChartHelper {
                 true, true, false
         );
 
-
         return chart;
     }
 
-
     public static JFreeChart createWorstCaseLineChart() {
         DefaultCategoryDataset dataset = new DefaultCategoryDataset();
+        int[] ns = {2, 10, 50, 100, 500, 1000, 5000, 10000, 20000};
 
-        int[] nValues = {100, 500, 1000, 2000, 4000, 8000, 16000};
+        for (int n : ns) {
+            dataset.addValue(Math.max(1.0, (double)n), "Linear / Interpolation (Worst) [O(n)]", String.valueOf(n));
+            dataset.addValue(Math.max(1.0, Math.sqrt(n)), "Jump Search [O(sqrt n)]", String.valueOf(n));
+            dataset.addValue(Math.max(1.0, Math.log(n) / Math.log(2)), "Binary Search [O(log n)]", String.valueOf(n));
 
-        for (int n : nValues) {
-
-            dataset.addValue((double) n, "O(n) - Linear", String.valueOf(n));
-            dataset.addValue(Math.log(n) / Math.log(2), "O(log n) - Binary", String.valueOf(n));
-            dataset.addValue(Math.sqrt(n), "O(sqrt(n)) - Jump", String.valueOf(n));
-            dataset.addValue(Math.log(Math.log(n)) / Math.log(2), "O(log log n) - Interpolation (Avg)", String.valueOf(n));
+            dataset.addValue(Math.max(1.0, (double)n), "Linear Search [O(n)] - LinkedList", String.valueOf(n));
+            dataset.addValue(Math.max(1.0, (double)n * (Math.log(n) / Math.log(2))), "Binary Search [O(n log n)] - LinkedList", String.valueOf(n));
+            dataset.addValue(Math.max(1.0, Math.pow(n, 2)), "Interpolation (Worst) [O(n^2)] - LinkedList", String.valueOf(n));
         }
 
-
         JFreeChart chart = ChartFactory.createLineChart(
-                "Theoretical Worst-Case Complexity (Log Scale)",
-                "Problem Size (n)",
-                "Number of Operations",
-                dataset,
-                PlotOrientation.VERTICAL,
-                true, true, false
+                "Worst-Case Time Complexity (Theoretical)",
+                "n (Input Size)", "Operations (log scale)",
+                dataset, PlotOrientation.VERTICAL, true, true, false
         );
-
-
         CategoryPlot plot = chart.getCategoryPlot();
         LogarithmicAxis logAxis = new LogarithmicAxis("Operations (log scale)");
         logAxis.setAllowNegativesFlag(false);
         plot.setRangeAxis(logAxis);
-
-
         return chart;
     }
 }
